[tool.poetry]
name = "piccadilly-air-tweeter"
version = "0.1.0"
description = ""
authors = ["Chris Northwood <chris@pling.org.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.24.0"
tweepy = "^4.14.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.black]
line-length = 100
target-version = ["py310"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

